--- a/changelog.txt
+++ b/changelog.txt
@@ -5,3 +5,9 @@ Date: 06. 11. 2020
   Changes :
     - Created the mod for stack 'challenge' pack
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.0
+Date: 06. 11. 2020
+
+  Changes :
+    - Changed recipe to a stack of every item.
+---------------------------------------------------------------------------------------------------
